# bank-automation

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/bank_automation/: __init__.py  __main__.py  containers.py  settings.py
src/bank_automation/adapters/: caisse_d_epargne_adapter.py
src/bank_automation/errors/: banking_errors.py  browser_errors.py
src/bank_automation/infra/: browser_service.py
src/bank_automation/services/: banking_service.py  digit_recognition_service.py
tests/: conftest.py  test_app.py  test_caisse_d_epargne_adapter.py  test_digit_recognition_service.py
