[tool.poetry]
name = "bank-automation"
version = "0.1.0"
description = ""
authors = ["Louis Brunet <lbrunet@neoxia.deloitte.fr>"]
readme = "README.md"
packages = [{include = "bank_automation", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11.0"
easyocr = "^1.7.2"
dependency-injector = "^4.45.0"
pydantic-settings = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] %(levelname)s %(name)s:%(lineno)d - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
